<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@mipmap/ic_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_reply_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_reply"
        android:textColor="@color/txtColorGray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etReply"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/hint_hb_reply"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/txtColorGray"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        tools:targetApi="o" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="188dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/bt_round_corner"
        android:gravity="center"
        android:text="保存"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

</LinearLayout>