<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_new_year" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:elevation="3dp"
            tools:targetApi="lollipop">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@color/txtColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSetting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/app_setting"
                android:textColor="@color/txtColor"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvStartAssistService"
            android:layout_width="180dp"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bt_round_corner"
            android:gravity="center"
            android:text="打开抢红包服务"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvClearMoneyRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/text_clear_record"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvMoneyRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>
</FrameLayout>
